--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   INSTANCE: 'Writerside/in'
-  ARTIFACT: 'webHelpTA-all.zip'
+  ARTIFACT: 'webHelpIN2-all.zip'
   DOCKER_VERSION: '241.18775'
 
 jobs:
